Fixed scrolling/overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,7 @@ body {
 	margin: 0;
 	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
 		sans-serif;
+	overflow: hidden;
 }
 
 a {
@@ -15,8 +16,21 @@ a {
 	text-decoration: none;
 }
 
-* {
+* *::before *::after {
 	box-sizing: border-box;
+}
+
+::-webkit-scrollbar {
+	width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+	background-color: rgb(168, 168, 168);
+	border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+	background-color: rgb(155, 155, 155);
 }
 
 @media (prefers-color-scheme: dark) {
